style.css
html {
  	box-sizing: border-box;
  	background-color: #a4daab;
  	height: 100%;
}

*, *:before, *:after {
  	box-sizing: inherit;
}

* {

-webkit-touch-callout: none; /* iOS Safari */
  -webkit-user-select: none;   /* Chrome/Safari/Opera */
  -khtml-user-select: none;    /* Konqueror */
  -moz-user-select: none;      /* Firefox */
  -ms-user-select: none;       /* Internet Explorer/Edge */
  user-select: none;           /* Non-prefixed version, currently
                                  not supported by any browser */
}

body {
	color: white;
	font-family: 'Quicksand', sans-serif;
	font-weight: 300;
	display: flex;
	flex-direction: column;
	justify-content: space-between;
	height: 100%;
}

nav {
	display: flex;
	justify-content: center;
	align-items: center;
}

.title {
	font-size: 3.5em;
	text-align: center;
	font-weight: 400;
	cursor: pointer;
}

.chord-icon {
	border: 3px solid white;
	padding: 10px;
	margin: 10px;
	cursor: pointer;
}


canvas {
	margin: 10px;
}

main {
	display: flex;
	justify-content: center;
	align-items: center;
	/*font-family: "Josefin Sans";*/
	flex-wrap: wrap;
	margin: 0 20px;
}

.chord-container {
	cursor: pointer;
	margin: 20px;
}

.pulsate {
	-webkit-animation-name: pulsate;
	animation-name: pulsate;
	-webkit-animation-duration: 1.1s;
	animation-duration: 1.1s;
    -webkit-animation-iteration-count: infinite; 
}

@-webkit-keyframes pulsate {
    0% {-webkit-transform: scale(1)}
    50% {-webkit-transform: scale(1.025)}
    100% {-webkit-transform: scale3d(1)}
}

@keyframes pulsate {
    0% {-webkit-transform: scale(1)}
    50% {-webkit-transform: scale(1.025)}
    100% {-webkit-transform: scale3d(1)}
}

.chord-name {
	font-weight: 400;
	text-align: center;
	margin: 0;
	-webkit-margin-after: 0;
}

.flat-sharp {
	font-size: 45px;
	vertical-align: 5px;
	margin: 0 -10px;
}

.landing-chord {
	font-size: 4em;
}

.more-chords {
	position: relative;
	left: 10%;
	cursor: pointer;
	display: inline-block;
}

.chord-menu {
	display: flex;
	justify-content: center;
	width: 100%;
	font-size: 3em;
	padding: 10px;
	margin-bottom: 10px;
}

.root-note, .maj-min {
	display: flex;
	justify-content: space-around;
}

.key {
	margin: 20px;
}

.a, .c, .d, .e, .g, .major, .minor {
	cursor: pointer;
	margin: 20px;
}

.bold {
	font-weight: 700;
}

.chord-list {
	display: flex;
	justify-content: flex-start;
	flex: 1 0 100%;
	overflow: scroll;
	margin: 10px;
}

.chord-chord {
	font-size: 2em;
}

footer {
	display: flex;
	justify-content: space-around;
	flex-wrap: wrap;
	margin-bottom: 10px;
}

ul {
	margin: 0;
	list-style: none;
}


td {
	padding: 5px;
}

table {
	padding: 0 10px;
}

